Try limiting the memory usage